--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Apartement by Wilan</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Apartement booking info by Wilan" name="description">
+  <meta content="apartement" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
