--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Lokasi:</h4>
-                <p>Apartemen Grand Asia Afrika, Jl. Karapitan No.01, Kota Bandung</p>
+                <p>Apartement Grand Asia Afrika, Jl. Karapitan No.01, Kota Bandung</p>
               </div>
 
               <div class="email">
