--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		  <ul style="text-align:left;">
               <li>Biaya booking mengikuti Airbnb dalam USD (Dolar Amerika Serikat) dan dikonversikan ke IDR (Indonesia Rupiah) mengikuti kurs pada saat booking dilakukan.</li>
               <li>Penyewa diwajibkan melakukan deposit sebesar Rp 500.000,-</li>
-              <li>Penyewa diwajibkan meberikan KTP saat melakukan Check-In</li>
+              <li>Penyewa diwajibkan memberikan KTP saat melakukan Check-In</li>
               <li>Deposit dan KTP akan dikembalikan ke penyewa pada saat Check-Out</li>
           </ul>
 		  <br/>
