--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <div class="row justify-content-center">
 			    <div id="datepicker" class="form-group mt-1 text-center justify-content-center">
 					<div class="col-md-12 form-group text-center">
-					  <h5>Tanggal Booking</h5>
+					  <h5>Pilih Tanggal Booking</h5>
 					</div>
                 </div>
               </div>
