--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Booking</h2>
+          <h2>Formulir Booking</h2>
         </div>
 
         <div class="row mt-1">
@@ -232,6 +232,7 @@
       });
       const picker = new easepick.create({
         element: '#datepicker',
+		firstDay: 0,
 		inline: true,
 		lang: 'id-ID',
         css: [
@@ -276,27 +277,27 @@
 			  
 			  $("#datepicker").html(`
 			  <div class="col-md-12 form-group text-center">
-				<h6>
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<span class="badge bg-primary">${nights} malam</span><br/>
+							<h5><span class="badge" style="background-color:#912e6d;">${nights} malam</span></h5>
 						</div>
 						<div class="col-12 text-left">
 							<div class="row">
-								<div class="col-12 mt-2">
-									<span class="badge bg-success me-3">Check-In</span>
-									${toIndonesia(start)['hari']}, ${toIndonesia(start)['tanggal']} ${toIndonesia(start)['bulan']} ${toIndonesia(start)['tahun']}
+								<div class="col-12 mt-1">
+									<h6>
+										<span class="badge bg-success me-3">Check-In</span>
+										${toIndonesia(start)['hari']}, ${toIndonesia(start)['tanggal']} ${toIndonesia(start)['bulan']} ${toIndonesia(start)['tahun']}
+									</h6>
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-12 mt-2">
+								<div class="col-12 mt-1 mb-3">
 									<span class="badge bg-warning me-1">Check-Out</span>
 									${toIndonesia(end)['hari']}, ${toIndonesia(end)['tanggal']} ${toIndonesia(end)['bulan']} ${toIndonesia(end)['tahun']}
 								</div>
 							</div>
 						</div>
 					<div>
-				</h6>
 			  </div>`);
 			});
 		  }
