--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#terms-conditions" class="nav-link scrollto"><i class="bx bx-info-circle"></i> <span>Syarat & Ketentuan</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-book-bookmark"></i> <span>Booking</span></a></li>
+        <li><a href="#booking" class="nav-link scrollto"><i class="bx bx-book-bookmark"></i> <span>Booking</span></a></li>
       </ul>
      </nav><!-- .nav-menu -->
     </div>
