--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
 
         <div class="row mb-3">
-			<div class="col-md-4"
+			<div class="col-md-4">
 			  <a data-fancybox="gallery" href="assets/img/gallery/01.webp">
 				<img class="gallery-main rounded img-fluid mt-1" src="assets/img/gallery/01.webp" style="height: 19rem;"/>
 			  </a>
