--- a/index.html
+++ b/index.html
@@ -176,11 +176,12 @@
 		
 		<div class="row pt-3 pb-3">
 			<h3>Lokasi unit sewaan</h3>
+			<small class="text-muted">Lokasi persis akan diberikan setelah pemesanan.</small>
 		</div>
 		
 		<div class="row">
 			<div class="col-12">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2643.463890667123!2d107.61625873410809!3d-6.923964722626122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e62b95dc5b1d%3A0x8ec43b8608b85235!2sJl.%20Karapitan%20No.1%2C%20Paledang%2C%20Kec.%20Lengkong%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040261!5e0!3m2!1sen!2sid!4v1675485495899!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d990.1806762530352!2d107.618128!3d-6.923714!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e62b9c22d201%3A0xc0903468e1f49fc7!2sApartemen%20Grand%20Asia%20Afrika%2C%20Jl.%20Karapitan%20No.1%2C%20Paledang%2C%20Lengkong%2C%20Bandung%20City%2C%20West%20Java%2040261!5e0!3m2!1sen!2sid!4v1675486601638!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 		</div>
 		<div class="row">
