--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               <li>Deposit dan KTP akan dikembalikan ke penyewa pada saat Check-Out</li>
           </ul>
 		  <br/>
-		  <p style="text-align:left;">Jika anda setuju dengan semua persyaratan dan ketentuan tersebut, silahkan isi <a href="#booking">formulir booking</a></p>
+		  <p style="text-align:left;">Jika anda setuju dengan semua persyaratan dan ketentuan tersebut, silahkan isi <a href="#booking" class="scrollto">formulir booking</a></p>
         </div>
 
       </div>
