--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Booking Apartement [2BR] Pemandangan Kota dengan Suasana Romantis by Wilan</title>
+  <title>Booking Apartement Pemandangan Kota Dengan Suasana Romantis by Wilan</title>
   <meta content="Apartement booking info by Wilan" name="description">
-  <meta content="apartement" name="keywords">
+  <meta content="apartement, sewa tempat bandung, sewa, airbnb" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
