--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
   
   <style>
   .easepick-wrapper{
@@ -236,7 +237,7 @@
 		  
           <div class="col-lg-4 mt-1 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="forms/contact.php" method="post" role="form">
               <div class="row justify-content-center">
 			    <div id="datepicker" class="form-group mt-1 text-center justify-content-center">
 					<div class="col-md-12 form-group text-center">
@@ -246,21 +247,21 @@
               </div>
 			  <div class="row mt-3">
 				<div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Nama" required>
+                  <input type="text" name="name" class="form-control" id="guest-name" placeholder="Nama" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="phone" class="form-control" name="phone" id="phone" placeholder="Nomor Whatsapp" required>
+                  <input type="phone" class="form-control" name="phone" id="guest-phone" placeholder="Nomor Whatsapp" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Catatan" required></textarea>
+                <textarea class="form-control" id="guest-message" name="message" rows="5" placeholder="Catatan" required></textarea>
               </div>
               <div class="mt-3 d-none">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="mt-3 text-center"><button type="submit" class="btn btn-primary" style="background-color:#912e6d;border-color:#8f1763;">Kirim permintaan booking</button></div>
+              <div class="mt-3 text-center"><button id="submit-booking" class="btn btn-primary" style="background-color:#912e6d;border-color:#8f1763;">Kirim permintaan booking</button></div>
             </form>
 
           </div>
